# rust-web-monitor

./: .env  Cargo.toml  web_monitor.db
migrations/: 20240702113508_init.down.sql  20240702113508_init.up.sql
src/: crawler.rs  db.rs  main.rs
tests/: db.rs
