[package]
name = "web_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = { version = "0.15" }
headless_chrome = { version = "1.0" }
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }